//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id Int [pk, increment]
  email String [unique, not null]
  username String [unique]
  roles Roles[] [not null]
  password String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  lastLoginAt DateTime
  IPsLogged String[] [not null]
  terms Boolean [not null, default: false]
  verified Boolean [not null, default: false]
  verificationCode String [not null, default: '']
  socialLogin Social
}

Table Right {
  id Int [pk, increment]
  name String [unique, not null]
  label String [not null]
  application String [not null]
  resource String [not null]
  action String [not null]
  possession String [not null]
  usedBy Role [not null]

  indexes {
    (application, name) [unique]
    (application, resource, action, possession) [unique]
  }
}

Table Role {
  id Int [pk, increment]
  name String [unique, not null]
  label String [not null]
  inheritedRoles Role [not null]
  childrenRoles Role [not null]
  rights Right [not null]
}

Table rights {
  usedbyId Int [ref: > Role.id]
  rightsId Int [ref: > Right.id]
}

Table roleInheritance {
  inheritedrolesId Int [ref: > Role.id]
  childrenrolesId Int [ref: > Role.id]
}

Enum Roles {
  ADMIN
  MODERATOR
  USER
}

Enum Social {
  GOOGLE
  APPLE
  TWITTER
  DISCORD
}

Enum Action {
  read
  manage
  update
  delete
  create
}